# clean_code_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: clean_dirty_sample.py  dirty_sample.py
src/: bot.py
src/clean_code_bot/: __init__.py
